--- a/sources/package.json
+++ b/sources/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build_loc": "vite build --mode loc",
+    "build_git": "vite build --mode github",
     "preview": "vite preview --port 4173",
     "rofl": " echo Привет придурок"
   },
